=========
Changelog
=========

Here you can find the recent changes to vcspull.

0.1.1
-----

- [testing] Fix sniffer on Python 3
- [cli] remove redundant message when adding remotes
- [docs] add animated screencast preview for ReadTheDocs and README.rst

0.1
---

- [cli]: support for specifying for config file path with ``-c``.
- [cli]: clarify error output when no repositories found

0.0.10
------

- [cli]: fix message when adding remotes
- [internals]: split config-related functions into ``config`` module.
- [tests]: consolidate tests from ``testsuite.cli`` into
  ``testsuite.config``.
- [tests]: remove stub TestSuites insite of ``cli`` tests.
- [tests]: Refactor helpers. Tests should now run much faster.
- [cli]: vcspull now checks for configs in ``~/.vcspull`` (yaml and json
  files) as well as the standard ``~/.vcspull.{yaml,json}`` files.

0.0.9.1
-------

- [internals]: move to ``__about__.py`` convention for pulling package
  data.
- [internals]: remove extraneous url from stdout in git repositories.

0.0.9
-----

- [dev]: support for tmuxp ``before_script`` to set up local virtualenv +
  dependencies.
- [dev]: Clean up ``__init__.py`` imports
- [internals]: move :meth:`update` to :meth:`update_dict` in ``utils``.
- [cli]: ``-d`` / ``--dirmatch`` for matching directories, accepts
  `fnmatch`_ \'s.
- [cli]: ``-r`` / ``--repomatch`` for matching directories, accepts
  `fnmatch`_ \'s.
- [cli]: ``-c`` / ``--config`` YAML / JSON file of repositories
- [config/vcs]: Exception for private / ssh GitHub repository URLs and 
  message to change to correct format.
- [docs]: Update docs to reflect updates on new commands and how to clone
  private / priveleged GitHub repos.

.. _fnmatch: http://pubs.opengroup.org/onlinepubs/009695399/functions/fnmatch.html

0.0.8.4
-------

- [cli] Update documentation when no config found to show ``yaml`` and
  ``json``. Remove mentioning of ``conf``.

0.0.8.3
-------

- [logging] `Issue #6`_ - fix issue where log templates would not